<resources>

    <string name="please_check_out_our_new_apps">Please, check out our apps.</string>
    <string name="recommend">Recommend</string>
    <string name="go">Download</string>
    <string name="cancel">Cancel</string>
    <string name="ad">AD</string>
    <string name="no_thanks">No thanks</string>
    <string name="rate_now">Rate now</string>
    <string name="later">Later</string>
    <string name="please_rate_us">Please, rate us !!</string>
</resources>