<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardApp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:background="@android:color/transparent"
    android:elevation="10dp"
    app:cardCornerRadius="@dimen/corner">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/layout_rounded_white">

        <TextView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_15sdp"
            android:background="@drawable/ads"

            android:gravity="center"
            android:paddingHorizontal="@dimen/_3sdp"
            android:text="@string/ad"
            android:textColor="#fff"
            android:textSize="@dimen/_9sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:maxLines="1"
            android:text="@string/recommend"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgRecommendedApp"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_13sdp"
            android:animateLayoutChanges="true"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_13sdp"
            android:text="@string/please_check_out_our_new_apps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgRecommendedApp" />

        <TextView
            android:id="@+id/yesButton"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/triple_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:background="@drawable/layout_rounded_dark_black"
            android:gravity="center_vertical|center_horizontal"
            android:paddingStart="@dimen/single_margin"
            android:paddingEnd="@dimen/single_margin"
            android:text="@string/go"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSubtitle" />

        <TextView
            android:id="@+id/noButton"
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/triple_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:layout_marginEnd="@dimen/double_margin"
            android:layout_marginBottom="@dimen/single_margin"
            android:background="@drawable/layout_rounded_dark_black"
            android:gravity="center_vertical|center_horizontal"
            android:paddingStart="@dimen/single_margin"
            android:paddingEnd="@dimen/single_margin"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubtitle"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>