<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:strokeColor="@color/colorPrimary"
    app:strokeWidth="1dp"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainView"
        android:layout_width="match_parent"
        android:background="@drawable/layout_rounded_white"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:gravity="center"
            android:paddingVertical="@dimen/_5sdp"
            android:text="@string/please_rate_us"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RatingBar
            android:id="@+id/rateBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:numStars="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rateBar">

            <TextView
                android:id="@+id/btnLater"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:gravity="center"
                android:text="@string/later"
                android:textAllCaps="false"
                app:layout_constraintEnd_toStartOf="@+id/btnRate"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="@+id/rateBar"
                app:layout_constraintTop_toBottomOf="@+id/rateBar" />

            <TextView
                android:id="@+id/btnRate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:gravity="center"
                android:text="@string/rate_now"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rateBar" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
